[package]
name = "jo"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3.6.4"
bytesize = "2.0.1"
chrono = "0.4.41"
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dhat = "0.3.3"
ego-tree = "0.10.0"
homedir = "0.3.6"
ratatui = "0.29.0"
smol = "2.0.2"
sysinfo = "0.35.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tui-textarea = "0.7.0"


[profile.release]
debug = 1

[features]
dhat-heap = []    # if you are doing heap profiling
dhat-ad-hoc = []  # if you are doing ad hoc profiling
